process of converting php versions
5.2 > 7.2

--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 #############################
-#   http://oraclerealm.com  #
+#   http://corruptsec.net   #
 #                           #
-#   Sqli Inject0r v1.3.3.7  #
+#   SQLi Inject0r v1.3.3.7  #
 #                           #
-#        ExploitMaker       #
+#        Ussen              #
 #                           #
 #############################
 
-This is a web version of a sqli inject0r
-created by ExploitMaker
+This is a web version of a sql inject0r
+created by Ussen
 
 Requirement 
 
